--- a/intro.html
+++ b/intro.html
@@ -164,72 +164,112 @@
             box-shadow: 0 0 20px rgba(0, 243, 255, 0.3);
         }
 
-        /* --- Timeline Styles --- */
-        .timeline {
-            position: relative;
-            margin: 40px 0 20px 20px;
-            padding-left: 20px;
-            border-left: 2px solid rgba(0, 243, 255, 0.3);
+        /* --- Social Buttons (Header) --- */
+        .header-socials {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 25px;
         }
 
-        .timeline-item {
-            position: relative;
-            margin-bottom: 35px;
-        }
-
-        .timeline-item:last-child {
-            margin-bottom: 0;
-        }
-
-        .timeline-marker {
-            position: absolute;
-            left: -29px;
-            /* Adjust based on border width and padding */
-            top: 5px;
-            width: 16px;
-            height: 16px;
-            background: var(--bg-color);
-            border: 2px solid var(--accent-cyan);
-            border-radius: 50%;
-            box-shadow: 0 0 10px rgba(0, 243, 255, 0.5);
-            transition: all 0.3s ease;
-        }
-
-        .timeline-item:hover .timeline-marker {
-            background: var(--accent-cyan);
-            box-shadow: 0 0 20px var(--accent-cyan);
-            transform: scale(1.2);
-        }
-
-        .timeline-date {
-            font-size: 0.9rem;
-            color: var(--accent-cyan);
-            margin-bottom: 5px;
-            font-family: monospace;
-        }
-
-        .timeline-title {
-            font-size: 1.3rem;
-            color: #fff;
-            margin: 0 0 5px 0;
-            font-weight: 600;
-        }
-
-        .timeline-subtitle {
-            font-size: 1rem;
-            color: var(--text-secondary);
-            margin: 0 0 10px 0;
-        }
-
-        .tag {
-            display: inline-block;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 4px 12px;
-            border-radius: 12px;
-            font-size: 0.8rem;
-            color: #ddd;
+        .social-glass-btn {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 10px 20px;
+            border-radius: 30px;
+            color: #fff;
+            text-decoration: none;
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            transition: all 0.3s ease;
+            font-size: 0.9rem;
         }
+
+        .social-glass-btn svg {
+            width: 18px;
+            height: 18px;
+            fill: currentColor;
+        }
+
+        .social-glass-btn:hover {
+            background: rgba(0, 243, 255, 0.15);
+            border-color: #00f3ff;
+            color: #00f3ff;
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(0, 243, 255, 0.2);
+        }
+
+        /* --- Educational Cards (Block by Block) --- */
+        .edu-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .edu-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 12px;
+            padding: 25px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .edu-card::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 4px;
+            height: 100%;
+            background: var(--accent-cyan);
+            opacity: 0.5;
+            transition: opacity 0.3s;
+        }
+
+        .edu-card:hover {
+            transform: translateY(-5px) scale(1.02);
+            background: rgba(255, 255, 255, 0.06);
+            border-color: rgba(0, 243, 255, 0.3);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+        }
+
+        .edu-card:hover::before {
+            opacity: 1;
+            box-shadow: 0 0 10px var(--accent-cyan);
+        }
+
+        .edu-info h3 {
+            margin: 0;
+            font-size: 1.2rem;
+            color: #fff;
+        }
+
+        .edu-info p {
+            margin: 5px 0 0;
+            color: var(--text-secondary);
+            font-size: 0.95rem;
+        }
+
+        .edu-year {
+            font-family: monospace;
+            color: var(--accent-cyan);
+            font-weight: bold;
+            font-size: 1rem;
+            background: rgba(0, 243, 255, 0.1);
+            padding: 6px 12px;
+            border-radius: 8px;
+            white-space: nowrap;
+        }
+
 
         @media (max-width: 768px) {
             .name-block h1 {
@@ -254,36 +294,64 @@
                 <h2>闫智尧</h2>
             </div>
 
-            <!-- Education Timeline -->
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-date">2026 - 2029 (Expected)</div>
-                    <h3 class="timeline-title">Rutgers Business School</h3>
-                    <p class="timeline-subtitle">Finance & Supply Chain Management</p>
-                    <span class="tag">Freshman</span>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-date">Double Major</div>
-                    <h3 class="timeline-title">School of Arts & Sciences</h3>
-                    <p class="timeline-subtitle">Computer Science</p>
-                    <span class="tag">Dean's List</span>
-                </div>
-            </div>
-            <p style="color: var(--accent-cyan); margin-top: 20px; font-family: monospace; font-size: 1.1rem;">
-                LucasYanzy@gmail.com</p>
-            <div style="margin-top: 15px;">
-                <a href="https://www.linkedin.com/in/lucasyanzy/" target="_blank"
-                    style="color: #fff; text-decoration: none; display: inline-flex; align-items: center; gap: 8px; font-size: 0.9rem; opacity: 0.8; transition: 0.3s;"
-                    onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.8'">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <!-- Prominent Social Links -->
+            <div class="header-socials">
+                <a href="https://www.linkedin.com/in/lucasyanzy/" target="_blank" class="social-glass-btn">
+                    <svg viewBox="0 0 24 24">
                         <path
                             d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
                     </svg>
-                    LinkedIn Profile
+                    LinkedIn
+                </a>
+                <a href="mailto:LucasYanzy@gmail.com" class="social-glass-btn">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-11.174l4.623 5.462zm2.141 2.529c1.034 1.245 2.233 2.542 3.236 2.542 1.002 0 2.201-1.295 3.235-2.542l4.801 5.542h-16.074l4.802-5.542zm5.402-2.339l4.576-5.411v11.139l-4.576-5.728zm-6.173-2.903l-4.993-5.216h17.989l-4.992 5.216-4.004 4.887-4-4.887z" />
+                    </svg>
+                    Email
+                </a>
+                <a href="https://github.com/LucasYanzy" target="_blank" class="social-glass-btn">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
+                    </svg>
+                    GitHub
+                </a>
+                <a href="https://instagram.com/LucasYanzy" target="_blank" class="social-glass-btn">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" />
+                    </svg>
+                    Instagram
                 </a>
             </div>
+
+        </header>
+
+        <!-- Education Block (New Cards) -->
+        <section>
+            <h3 class="section-title">Education Journey / 教育经历</h3>
+
+            <div class="edu-grid">
+                <!-- Rutgers Business School -->
+                <div class="edu-card">
+                    <div class="edu-info">
+                        <h3>Rutgers Business School</h3>
+                        <p>Finance & Supply Chain Management</p>
+                    </div>
+                    <div class="edu-year">2026 - 2029</div>
+                </div>
+
+                <!-- School of Arts & Sciences -->
+                <div class="edu-card">
+                    <div class="edu-info">
+                        <h3>School of Arts & Sciences</h3>
+                        <p>Computer Science</p>
+                    </div>
+                    <div class="edu-year">Double Major</div>
+                </div>
+            </div>
+        </section>
         </header>
 
         <section>
